<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#e9e9e9">

    <FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="50dip"
        android:background="#0087de"
        android:paddingBottom="2dip"
        android:paddingTop="2dip">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:src="@drawable/ic_battery"
            android:onClick="batteryClicked"
            android:layout_marginLeft="8dp"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="#fff"
            android:text="@string/user_account" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="right"
            android:minWidth="70.0dip"
            android:orientation="horizontal"
            android:paddingRight="4dip" >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/back"
                android:id="@+id/close"
                android:textSize="20sp"
                android:textColor="#fff"
                android:layout_marginLeft="5dip" />
        </LinearLayout>
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_your_detail"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:textColor="#0087de"
            android:text="@string/your_details"/>
    </LinearLayout>

    <View
        android:layout_height="1px"
        android:background="#d8d8d8"
        android:layout_width="fill_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:onClick="newAccount">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_pen_blue"
                android:layout_marginLeft="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="54dp"
                android:textSize="15sp"
                android:text="@string/new_account" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:minWidth="70.0dp"
                android:paddingRight="4dp" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dip"
                    android:src="@drawable/ic_goin" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_height="1px"
            android:background="#d8d8d8"
            android:layout_marginLeft="15dp"
            android:layout_width="fill_parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:onClick="signin">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_signin"
                android:layout_marginLeft="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="54dp"
                android:textSize="15sp"
                android:text="@string/sign_in" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:minWidth="70.0dp"
                android:paddingRight="4dp" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dip"
                    android:src="@drawable/ic_goin" />
            </LinearLayout>
        </FrameLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:orientation="horizontal"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_our_detail"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="4dp"
            android:textColor="#0087de"
            android:text="@string/our_details"/>
    </LinearLayout>

    <View
        android:layout_height="1px"
        android:background="#d8d8d8"
        android:layout_width="fill_parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#fff"
        android:orientation="vertical">

        <FrameLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:onClick="contactUs">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_contact_us"
                android:layout_marginLeft="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="54dp"
                android:textSize="15sp"
                android:text="@string/contact_us" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:minWidth="70.0dp"
                android:paddingRight="4dp" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dip"
                    android:src="@drawable/ic_goin" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_height="1px"
            android:background="#d8d8d8"
            android:layout_marginLeft="15dp"
            android:layout_width="fill_parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_faq"
                android:layout_marginLeft="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="54dp"
                android:textSize="15sp"
                android:text="@string/faq" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:minWidth="70.0dp"
                android:paddingRight="4dp" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dip"
                    android:src="@drawable/ic_goin" />
            </LinearLayout>
        </FrameLayout>

        <View
            android:layout_height="1px"
            android:background="#d8d8d8"
            android:layout_marginLeft="15dp"
            android:layout_width="fill_parent"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="45dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:src="@drawable/ic_tos"
                android:layout_marginLeft="14dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="54dp"
                android:textSize="15sp"
                android:text="@string/tos" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:minWidth="70.0dp"
                android:paddingRight="4dp" >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="15dip"
                    android:src="@drawable/ic_goin" />
            </LinearLayout>
        </FrameLayout>

    </LinearLayout>



</LinearLayout>