<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/scrollView"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/p_shirt_hanger"
                android:text="@string/shirt1"
                android:id="@+id/image1"
                android:textColor="#00e5ee"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:typeface="serif"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/count1"
                android:textColor="#fff"
                android:textSize="16sp"
                android:layout_marginLeft="-37dp"
                android:layout_marginTop="-150dp"
                android:gravity="center"
                android:background="@drawable/badge_price"
                android:visibility="gone"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/p_shirt_folded"
                android:text="@string/shirt2"
                android:id="@+id/image2"
                android:textColor="#00e5ee"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:typeface="serif"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="16sp"
                android:id="@+id/count2"
                android:layout_marginLeft="-37dp"
                android:layout_marginTop="-150dp"
                android:gravity="center"
                android:background="@drawable/badge_price"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/p_dinner_shirt"
                android:text="@string/shirt3"
                android:id="@+id/image3"
                android:textColor="#00e5ee"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:typeface="serif"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:id="@+id/count3"
                android:textSize="16sp"
                android:gravity="center"
                android:layout_marginLeft="-37dp"
                android:layout_marginTop="-150dp"
                android:background="@drawable/badge_price"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/p_silk_shirt"
                android:text="@string/shirt4"
                android:id="@+id/image4"
                android:textColor="#00e5ee"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:typeface="serif"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/count4"
                android:layout_marginLeft="-37dp"
                android:layout_marginTop="-150dp"
                android:background="@drawable/badge_price"
                android:visibility="gone"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:background="@drawable/p_silk_blouse_shirt"
                android:text="@string/shirt5"
                android:id="@+id/image5"
                android:textColor="#00e5ee"
                android:textSize="25dp"
                android:textStyle="bold"
                android:gravity="bottom"
                android:typeface="serif"
                android:paddingBottom="15dp"
                android:paddingLeft="15dp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="#fff"
                android:textSize="16sp"
                android:gravity="center"
                android:id="@+id/count5"
                android:layout_marginLeft="-37dp"
                android:layout_marginTop="-150dp"
                android:background="@drawable/badge_price"
                android:visibility="gone"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
